--- a/2.html
+++ b/2.html
@@ -109,7 +109,7 @@
 			return output;
 		}
 		setInterval(() => {// this uses .textContent because it doesn't force a reflow and kill the page because of a ton of forced reflows lol
-			document.querySelectorAll(".glitch").forEach((a)=>{a.textContent = `${zalgify("assignment",10)} (words: ${document.querySelector("#main").textContent.split(" ").length})`});
+			document.querySelectorAll(".glitch").forEach((a)=>{a.textContent = `${zalgify("assignment",10)}`});
 		}, 10)
 		document.querySelector("#secret").onmouseover = function() {
 			alert("You have discovered an easter egg! There are also many fake/scam antiviruses that have funny songs. Protegent Antivirus is a good example");
