--- a/3.html
+++ b/3.html
@@ -2,11 +2,12 @@
 
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-	<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
-<body class="parallax" style="font-family: 'Roboto', sans-serif; background-color: rgb(49, 49, 49); color: rgb(212, 212, 212);">
+<body class="parallax"
+    style="font-family: 'Roboto', sans-serif; background-color: rgb(49, 49, 49); color: rgb(212, 212, 212);">
     <div align="center" style="background-color: rgb(90, 45, 45);border-radius: 5px;border: solid brown">
         <br>
         <h1 onclick="window.location='index.html'">Cyber Assignment 1 - Lachlan Korodaj</h1>
@@ -26,8 +27,10 @@
 		padding: 10px;color:black;">What is the worst-case scenario in theory? And in real life? Can you explain using
             examples?</div>
         <p>
-            The worst case scenario is something like 1984. Some company or entity supresses the people's knowledge of cybersec and has complete
-            control over their lives with their lack of knowledge and the people cannot rebel because they do not know that the suppressor
+            The worst case scenario is something like 1984. Some company or entity supresses the people's knowledge of
+            cybersec and has complete
+            control over their lives with their lack of knowledge and the people cannot rebel because they do not know
+            that the suppressor
             is even doing anything.
         </p>
         <div style="background-color: rgb(146, 146, 146);
@@ -35,14 +38,43 @@
 		border-radius: 5px;
 		padding: 10px;color:black;">What are the best-case scenarios? Explain using examples.</div>
         <p>
-            The best case scenario is already being enacted. It is about people being educated about cybersecurity in school and
-            in the workplace. In most workplaces there is a cybersecurity policy and annual or monthly cybersecurity checkup meetings.
-            This is important because some big businesses are large targets and they can be very vulnerable if no security policy
-            is in place. There are also many companies whose job is to try and hack into businesses to test and patch security. 
-            Police are also coming into ACT public schools to talk about cybersecurity and there are a plethora of YouTube channels educating people about cybersecurity. 
+            The best case scenario is already being enacted. It is about people being educated about cybersecurity in
+            school and
+            in the workplace. In most workplaces there is a cybersecurity policy and annual or monthly cybersecurity
+            checkup meetings.
+            This is important because some big businesses are large targets and they can be very vulnerable if no
+            security policy
+            is in place. There are also many companies whose job is to try and hack into businesses to test and patch
+            security.
+            Police are also coming into ACT public schools to talk about cybersecurity and there are a plethora of
+            YouTube channels educating people about cybersecurity.
+        </p>
+        <div style="background-color: rgb(146, 146, 146);
+		border: solid 5px rgb(146, 68, 68);
+		border-radius: 5px;
+		padding: 10px;color:black;">References</div>
+        (I have used '' instead of <>, the harvard formatting, because it invalidates the html)
+        <p id="r">
+
+
         </p>
     </div>
     <script>
+        document.getElementById("r").innerHTML = `‘7 Qualities That Differentiate a Great Programmer from a Good Programmer’ 2020, Scalable Path, viewed 23 April 2021, 'https://www.scalablepath.com/blog/7-qualities-that-differentiate-a-good-programmer-from-a-great-programmer/'.
+<br><br>‘Alice and Bob’ 2021, Wikipedia, viewed 23 April 2021, 'https://en.wikipedia.org/w/index.php?title=Alice_and_Bob&oldid=1002381852'.
+<br><br>‘Awesome Red Technology Wallpapers’ n.d., WallpaperAccess, viewed 23 April 2021, 'https://wallpaperaccess.com/red-technology'.
+<br><br>Brandom, R. 2019, ‘There are now 2.5 billion active Android devices’, The Verge, viewed 23 April 2021, 'https://www.theverge.com/2019/5/7/18528297/google-io-2019-android-devices-play-store-total-number-statistic-keynote'.
+<br><br>‘Full Page Reload’ n.d., IEEE Spectrum: Technology, Engineering, and Science News, viewed 23 April 2021, 'https://spectrum.ieee.org/tech-talk/robotics/artificial-intelligence/super-artificialintelligence'.
+<br><br>Goldberg, L. 2020, ‘Tor: Anonymity For Better or For Worse’, Medium, viewed 23 April 2021, 'https://medium.com/systems-and-network-security/tor-anonymity-for-better-or-for-worse-d8407b1d9287'.
+<br><br>Jones, K. 2019, ‘The Game of Life: Visualizing China’s Social Credit System’, Visual Capitalist, viewed 23 April 2021, 'https://www.visualcapitalist.com/the-game-of-life-visualizing-chinas-social-credit-system/'.
+<br><br>Knolskape 2003, Русский:  Корпорации, входящие в аббревиатуру GAFAM: Google, Apple, Facebook, Amazon and Microsoft, viewed 23 April 2021, 'https://commons.wikimedia.org/wiki/File:Google,_Apple,_Facebook,_Amazon_and_Microsoft.png'.
+<br><br>Lee, D. 2019, ‘Apple says there are 1.4 billion active Apple devices’, The Verge, viewed 23 April 2021, 'https://www.theverge.com/2019/1/29/18202736/apple-devices-ios-earnings-q1-2019'.
+<br><br>Microsoft by the Numbers n.d., viewed 23 April 2021, 'https://news.microsoft.com/bythenumbers/en/windowsdevices'.
+<br><br>Nov 2020, S.S. 18 & P.m, 11 2020, ‘2020’s Most Common Passwords Are Laughably Insecure’, PCMag Australia, viewed 23 April 2021, 'https://au.pcmag.com/security/83948/2020s-most-common-passwords-are-laughably-insecure'.
+<br><br>Rob Braxman Tech - YouTube n.d., viewed 23 April 2021, 'https://www.youtube.com/channel/UCYVU6rModlGxvJbszCclGGw/videos?view=0&sort=p'.
+<br><br>Top Cybersecurity Consulting Companies in Australia - 2021 Reviews | Clutch.co n.d., viewed 23 April 2021, 'https://clutch.co/au/it-services/cybersecurity'.
+<br><br>信用广州网 n.d., viewed 23 April 2021, 'http://credit.gz.gov.cn/'.`
+
         function zalgify(text, intensity) { // i just reused this lol
             let upperDiacritics = ['\u030d', '\u030e', '\u0304', '\u0305', '\u033f', '\u0311', '\u0306', '\u0310',
                     '\u0352',
@@ -95,7 +127,7 @@
         document.querySelector("#secret").onmouseover = function () {
             alert(
                 "You have discovered an easter egg! There are also many fake/scam antiviruses that have funny songs. Protegent Antivirus is a good example"
-                );
+            );
             window.open("https://www.youtube.com/watch?v=PIp06sdFHLM");
         }
         document.querySelector("#secret2").onmouseover = function () {
